4ºAno/EGS/Cenas/Kubernetes/diving_into_k3s/8-secrets/deployment.yaml

# Create App deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: diving-into-k3s
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: registry.deti:5000/app:v8
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: app-secret
            mountPath: "/tmp/secrets"
            readOnly: true
      volumes:
        - name: app-secret
          secret:
            secretName: app-secret

# Create nginx deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: diving-into-k3s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:alpine
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
          - name: nginx-static-pvc
            mountPath: /var/www/static
          - name: nginx-conf
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            readOnly: true
      restartPolicy: Always
      volumes:
      - name: nginx-static
        persistentVolumeClaim:
          claimName: nginx-static-pvc
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
             - key: nginx.conf
               path: nginx.conf

# Create Service for APP
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: diving-into-k3s
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: app

# Create Service for APP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: diving-into-k3s
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx

# Configure Traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-k3s
  namespace: diving-into-k3s
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: app.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port: 
              number: 80

# NGINX Config map
